force-app/src/objects/fferpcore__frb_Real_Time_Configuration__c.object
<CustomObject>
    <description>Stores custom real-time configurations that can be used in Report Builder.</description>
    <fields>
        <fullName>fferpcore__Dataset_API_Name__c</fullName>
        <description>Text field that stores an Analytics dataset&apos;s API name to map from.</description>
        <label>Dataset API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Dataset_Delta_Field_API_Name__c</fullName>
        <description>Text field that stores an Analytics dataset field&apos;s API name to use as the delta for querying the most recent records from the database.</description>
        <label>Dataset Delta Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Dataset_Record_Id_Field_API_Name__c</fullName>
        <description>Text field that stores an Analytics dataset field&apos;s API name to use as the record ID field to match against the Salesforce object record ID field.</description>
        <label>Dataset Record ID Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Description__c</fullName>
        <description>The description of the Real-Time Configuration.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Field_Map__c</fullName>
        <description>Long Text Area field that stores an array of JavaScript objects representing a map between dataset and Salesforce Object fields in JSON format.</description>
        <label>Field Map</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__SObject_API_Name__c</fullName>
        <description>Text field that stores a Salesforce object&apos;s API name to map against.</description>
        <label>Salesforce Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>xRB Real-Time Configuration</label>
    <listViews>
        <fullName>fferpcore__All</fullName>
        <columns>NAME</columns>
        <columns>fferpcore__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Real-Time Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>xRB Real-Time Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>